--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles.css">
 <script src="index.js"></script>
 </head>
-<body>
+<body onload="loadData()">
   <header>
     <div style="overflow: auto;">
       <h1>Auction Sprint     <img src="logo.png" alt="Logo" class="logo"></h1>
